# codelens-ai

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  api_server.py  app.py  architecture.drawio  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/code_doc_assistant/: __init__.py  config.py
src/code_doc_assistant/api/: __init__.py  router.py
src/code_doc_assistant/chat/: __init__.py  assistant.py  prompts.py
src/code_doc_assistant/embeddings/: __init__.py  embedder.py
src/code_doc_assistant/guardrails/: __init__.py  input_guard.py
src/code_doc_assistant/ingestion/: __init__.py  chunker.py  loader.py
src/code_doc_assistant/retrieval/: __init__.py  vector_store.py
src/code_doc_assistant/utils/: __init__.py  logging.py  token_counter.py
tests/: __init__.py  conftest.py  test_assistant.py  test_chunker.py  test_embedder.py  test_guardrails.py  test_loader.py  test_vector_store.py
